--- a/www/index.html
+++ b/www/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
     <script>
+      alert('Então tá certo!')
     </script>
 </head>
 <body>
-	<br />
-    This is a template for Monaca app.
+    <h1>Legal</h1>
 </body>
 </html>
