Mudança no Css e Html, importando arquivos.

--- a/www/index.html
+++ b/www/index.html
@@ -1,17 +1,37 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: content: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
-    <script src="components/loader.js"></script>
-    <link rel="stylesheet" href="components/loader.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="components/loader.js"></script> 
+    <link rel="stylesheet" href="components/loader.css"> 
     <link rel="stylesheet" href="css/style.css">
-    <script>
-      alert('Então tá certo!')
-    </script>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Legal</h1>
+    <div class="container">
+        <header class="head">
+            <img id="logo" src="../style/LOGO_ACESSIBILIDADE_-_AGOSTO_2015.jpg" alt="">
+            AcessDigital
+        </header>
+        <nav class="nave">
+            <article><a href="">Inicio</a></article>
+            <article><a href="">O que é acessibilidade</a></article>
+            <article><a href="">Sobre nós</a></article>
+        </nav>
+            <section class="conteudo">
+                <div id="cont-text">
+                    <img id="cont-img" src="../style/053-imagem-post-acessibilidade-web-responsabilidade-de-todo-time.png" alt="">
+                    <center>
+                    <div id="text">A acessibilidade é a possibilidade de uma pessoa com deficiência ou mobilidade reduzida utilizar com segurança e autonomia espaços, mobiliários, equipamentos urbanos, edificações, transportes, informação e comunicação. 
+A acessibilidade é um direito que oferece o máximo de autonomia, segurança e conforto possíveis para quem dela usufrui, com dignidade. 
+A acessibilidade é uma condição fundamental e imprescindível a todo e qualquer processo de inclusão social. Ela se apresenta em múltiplas dimensões, incluindo aquelas de natureza atitudinal, física, tecnológica, informacional, comunicacional, linguística e pedagógica, dentre outras. 
+Um plano de acessibilidade é uma ferramenta de gestão que tem como objetivo monitorar as ações de inclusão de pessoas com deficiência e mobilidade reduzida. 
+                </div>
+            </center>
+        </section>
+            <footer class="fim"></footer>
+    </div>
 </body>
 </html>
